[package]
name = "calcyon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.11.6"
chrono = "0.4.31"
warp = "0.3"

[dependencies.tokio]
version = "1.32.0"
features = ["rt-multi-thread","macros"]

[dependencies.ical]
version = "0.9"
default-features = false
features = ["ical", "vcard", "generator"]
